--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,16 @@
     tools:context=".MainActivity">
 
     <EditText
-        android:id="@+id/editTextNumberPassword2"
-        android:layout_width="118dp"
-        android:layout_height="27dp"
+        android:id="@+id/password"
+        android:layout_width="270dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
         android:ems="10"
         android:inputType="numberPassword"
-        android:text="Password"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.948"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.811" />
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/passwordtxt"
+        app:layout_constraintStart_toEndOf="@+id/passwordtxt"
+        app:layout_constraintTop_toTopOf="@+id/passwordtxt" />
 
     <Button
         android:id="@+id/button"
@@ -57,7 +55,7 @@
         app:layout_constraintVertical_bias="0.707" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/passwordtxt"
         android:layout_width="95dp"
         android:layout_height="30dp"
         android:text="Password"
@@ -70,17 +68,15 @@
 
     <EditText
         android:id="@+id/editTextTextPersonName"
-        android:layout_width="117dp"
-        android:layout_height="26dp"
+        android:layout_width="270dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.948"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.707" />
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView5"
+        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintTop_toTopOf="@+id/textView5" />
 
     <VideoView
         android:id="@+id/videoView"
